# ChangeLog for media-tv/otrdecoder-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  otrdecoder-bin-492.ebuild:
  marked ~amd64

  28 Oct 2007; Markus Ullmann <jokey@gentoo.org> otrdecoder-bin-492.ebuild:
  remove debug message

  20 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  -otrdecoder-bin-446.ebuild, +otrdecoder-bin-492.ebuild:
  version bump and drop old

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  otrdecoder-bin-446.ebuild:
  eutils not needed

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +otrdecoder-bin-446.ebuild, +metadata.xml:
  new ebuild for the decoder of onlinetvrecorder.com (German)
