@@ -1,4 +1,4 @@
-DIST otrdecoder-bin-linux-v492.tar.bz2 73188 RMD160 701eb95f51988dcfd319da884142b862d1f5a080 SHA1 ced56e697bf2c854b7dad5ee8fc5ff7e0c8e4557 SHA256 30962a7f42ba322f320ff7ebddaa069011144fefadf7c8f94186215084decfd7
-EBUILD otrdecoder-bin-492.ebuild 840 RMD160 e53ea3fd88c1460dc1ef208238a775e5bbe4984d SHA1 ea5d6eba0fe50b1a9c5858da816255dbf636c56c SHA256 a185cb7e4eaedde20c20e0be54348f08a0f62be146c653eefeaf43afe072a9a4
-MISC ChangeLog 735 RMD160 948d0e8633b0c1eaf34e1258ccd8d2e6fdd7bb51 SHA1 1c74a0819ab968d94faeba7fcb5ce767ac03cd20 SHA256 53dac79e9e603bf6685916b6a14dec72ab5875f680f33a88acf9949d87426191
+DIST otrdecoder-bin-linux-static-v514.tar.bz2 475536 RMD160 72a19a5323b56286bb0721638060a97a648673fa SHA1 0cda2bbfdaaef5ddcd8118db5ea7ff8f4094cb5b SHA256 68a18846f7784568cca227a29b7d375933359780822812e88b811bdf9d4ed4ff
+EBUILD otrdecoder-bin-514.ebuild 820 RMD160 1aa5fc187b3e7f096515167e87c18e0bd2e9fe60 SHA1 5b40001924691e13ab9f8efe01f81de5655c3888 SHA256 18bda48c993a02e8c48d66d3b1e81e2116f313a3f507eae708d3307bd73d86a3
+MISC ChangeLog 883 RMD160 b2cfcea03689a33333855de086034fc0c70ed1c1 SHA1 87229e5e60e71e98e6b70d382a177bc181c32085 SHA256 b57a1d1e8912930ebb94f3120db279d3ccd180f1ee2aa76797a2e58cf9f3fe7d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
