@@ -1,0 +1,4 @@
+DIST canto-0.4.0.tar.gz 25144 RMD160 0e16c04efd9a3f193bd807871ef13d1cf6080662 SHA1 43c56880e2cffbf72ed538e34cb5288485558b6b SHA256 1481e7d27eb5e9bac4e404da18657551775f7efa6439c191899ddb17da732d49
+EBUILD canto-0.4.0.ebuild 402 RMD160 a2c37c844fe919fe4f45f807e14b6799ae7e777a SHA1 c4c1b97b80b5d568c274be57a80c1f260a0ce095 SHA256 a50a77e7f38e4c28ba2a7073973fbbb0ae1d87d67c3f72476b22665919ec502f
+MISC ChangeLog 324 RMD160 d194b02ea27d521fb823673c82ca5fa7e08b76ad SHA1 165d21947244a04c021af2adbfe119a9b254bd29 SHA256 0a97dfa94d0d328eb20f35692ac632b320c0572bb9586b54f253f893ae832ada
+MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
