@@ -1,0 +1,12 @@
+# ChangeLog for net-news/canto
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  04 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  canto-0.4.0.ebuild:
+  Use distutils
+
+  03 Jul 2008; Jack Miller (TheMoken) jack@codezen.org +canto-0.4.0.ebuild,
+  +metadata.xml:
+  First release.
+
