@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/otrdecoder-bin
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
+  -otrdecoder-bin-492.ebuild, +otrdecoder-bin-514.ebuild:
+  updated version, now use static
 
   16 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
   otrdecoder-bin-492.ebuild:
